--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "type": "commonjs",
   "dependencies": {
-    "discord.js": "^14.21.0"
+    "discord.js": "^14.21.0",
+    "dotenv": "^16.0.0"
   },
   "name": "auto-role-bot",
   "version": "1.0.0",
